--- a/index.html
+++ b/index.html
@@ -484,26 +484,22 @@
 
 
 
-
 <!-- HTML SECTION -->
 <section id="hero" class="hero-section-wrapper">
-<div class="hero-content">
-      <h1 class="hero-title orbitron">DIPESH POUDEL</h1>
-      <h2 class="hero-subtitle">
-Electrical Engineer
- </h2>
-      
-    </div>
+  <div class="hero-content">
+    <h1 class="hero-title orbitron">DIPESH POUDEL</h1>
+    <h2 class="hero-subtitle">Electrical Engineer</h2>
+  </div>
   
   <div class="hero-background-box">
     <div class="hero-background-overlay"></div>
     <div class="hero-content-container">
       <!-- Left Content Area -->
       <div class="hero-left-content">
+        <p class="hero-quote">"I like engineering because I love imagining."</p>
         <h2 class="hero-subtitle-enhanced">
           As an enthusiastic Electrical Engineering researcher with a strong academic foundation, I am parallelly pursuing industry level work while advancing innovative research initiatives.
         </h2>
-        <p class="hero-quote">"I like engineering because I love imagining."</p>
         
         <!-- Three Info Boxes -->
         <div class="hero-info-boxes">
@@ -550,15 +546,27 @@ Electrical Engineer
 
 <!-- CSS STYLES -->
 <style>
+.hero-subtitle {
+  font-size: 2rem;
+  color: #ffffff;
+  text-align: center;
+  font-weight: 300;
+  letter-spacing: 0.08em;
+  margin: 0 auto 40px auto;
+  text-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+  display: block;
+}
+
 /* Hero Section Container - Completely isolated */
 .hero-section-wrapper {
   position: relative;
   width: 100%;
   margin: 0;
-  padding: 20px 0 60px 0; /* Reduced top padding for fixed header */
+  padding: 20px 0 60px 0;
   overflow: visible;
   isolation: isolate;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: transparent;
@@ -620,28 +628,37 @@ Electrical Engineer
   margin: 0;
   line-height: 1.2;
   text-align: center;
-  display: none;
+  display: block;
+  padding: 30px 50px;
+  border: 4px solid #00f3ff;
+  background: rgba(0, 10, 20, 0.85);
+  box-shadow: 0 0 50px rgba(0, 243, 255, 0.6), inset 0 0 30px rgba(0, 243, 255, 0.1);
+  backdrop-filter: blur(5px);
+  position: relative;
+  max-width: fit-content;
+  margin: 0 auto 20px auto;
 }
 
 .hero-subtitle-enhanced {
-  font-size: 1.85rem;
-  line-height: 2;
+  font-size: 1.5rem;
+  line-height: 1.9;
   color: #ffffff;
   font-weight: 400;
-  margin: 20px 0;
+  margin: 0 0 30px 0;
   text-align: center;
-  letter-spacing: 0.03em;
-  text-shadow: 0 2px 15px rgba(0, 0, 0, 0.9), 0 0 10px rgba(0, 243, 255, 0.3);
+  letter-spacing: 0.02em;
+  text-shadow: 0 2px 15px rgba(0, 0, 0, 0.9), 0 0 10px rgba(0, 243, 255, 0.2);
 }
 
 .hero-quote {
-  font-size: 1.5rem;
+  font-size: 2.2rem;
   font-style: italic;
   color: #00f3ff;
-  margin: 15px 0 30px 0;
+  margin: 0 0 30px 0;
   text-align: center;
-  text-shadow: 0 0 20px rgba(0, 243, 255, 0.8), 0 0 5px rgba(0, 243, 255, 1);
-  font-weight: 300;
+  text-shadow: 0 0 25px rgba(0, 243, 255, 0.9), 0 0 10px rgba(0, 243, 255, 1);
+  font-weight: 400;
+  letter-spacing: 0.02em;
 }
 
 /* Info Boxes Grid */
@@ -774,7 +791,7 @@ Electrical Engineer
 /* Responsive Design */
 @media (max-width: 1400px) {
   .hero-subtitle-enhanced {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
   }
 }
 
@@ -785,7 +802,12 @@ Electrical Engineer
   }
   
   .hero-subtitle-enhanced {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
+  }
+  
+  .hero-title {
+    font-size: 3.5rem;
+    padding: 25px 40px;
   }
 }
 
@@ -794,12 +816,21 @@ Electrical Engineer
     padding: 20px 0 60px 0;
   }
   
+  .hero-title {
+    font-size: 3rem;
+    padding: 20px 30px;
+  }
+  
+  .hero-subtitle {
+    font-size: 1.6rem;
+  }
+  
   .hero-subtitle-enhanced {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   
   .hero-quote {
-    font-size: 1.3rem;
+    font-size: 1.8rem;
   }
   
   .hero-info-boxes {
@@ -819,13 +850,22 @@ Electrical Engineer
     border: 3px solid #00f3ff;
   }
   
-  .hero-subtitle-enhanced {
+  .hero-title {
+    font-size: 2.5rem;
+    padding: 20px 25px;
+  }
+  
+  .hero-subtitle {
     font-size: 1.4rem;
-    line-height: 1.8;
+  }
+  
+  .hero-subtitle-enhanced {
+    font-size: 1.2rem;
+    line-height: 1.7;
   }
   
   .hero-quote {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   
   .hud-element {
@@ -851,26 +891,26 @@ Electrical Engineer
     padding: 25px 15px;
   }
   
+  .hero-title {
+    font-size: 2rem;
+    padding: 15px 20px;
+    letter-spacing: 0.1em;
+  }
+  
+  .hero-subtitle {
+    font-size: 1.2rem;
+  }
+  
   .hero-subtitle-enhanced {
-    font-size: 1.15rem;
-    line-height: 1.7;
+    font-size: 1rem;
+    line-height: 1.6;
   }
   
   .hero-quote {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 }
 </style>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -4580,6 +4620,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
