--- a/index.html
+++ b/index.html
@@ -1073,8 +1073,6 @@
 
 
 
-
-
 <section id="education" class="section">
   <div class="max-w-7xl">
     <h2 class="orbitron section-title-edu">
@@ -1113,379 +1111,223 @@
   </div>
 </section>
 
-
-
-
-
-
-
-
-    <!-- Certifications Section -->
-    <div class="certifications-section">
-      <h3 class="subsection-title orbitron">Professional Certifications</h3>
-      <div class="certifications-grid">
-        <div class="cert-card">
-          <div class="cert-top cert-top--stanford">
-            <img src="./graphics/stanford.jpg" alt="Stanford" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Deep Learning AI</h4>
-            <p class="cert-provider">Andrew Ng</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--deep-learning">
-            <img src="./graphics/matlablogo.png" alt="Matlab" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Adaptive Neuro Fuzzy Inference System</h4>
-            <p class="cert-provider">Watlab</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--google">
-            <img src="./graphics/udemylogo.png" alt="udemy logo" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Python ML </h4>
-            <p class="cert-provider">Udemy</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--ibm">
-            <img src="./graphics/matlablogo.png" alt="matlab" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Control Systems</h4>
-            <p class="cert-provider">Matlab</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--microsoft">
-            <img src="./graphics/autocadlogo.png" alt="Autocad" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Electrical Panel Design</h4>
-            <p class="cert-provider">Autocad Electrical</p>
-          </div>
-        </div>
-
-        <div class="cert-card">
-          <div class="cert-top cert-top--ibm-advanced">
-            <img src="./graphics/powerworld.png" alt="Power World Simulator" class="cert-logo">
-          </div>
-          <div class="cert-bottom">
-            <h4 class="cert-title">Power System Design</h4>
-            <p class="cert-provider">Power World Simulator</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Call to Action -->
-    <div class="cta-container">
-      <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Education%20Details" class="cta-btn orbitron">
-        Request Education Details
-      </a>
-    </div>
-  </div>
-</section>
-
 <style>
-  /* Scoped CSS variables and base styles for #education section */
-  #education {
-    --primary-blue: #3b82f6;
-    --accent-cyan: #1dd1a1;
-    --accent-green: #0ab57b;
-    font-family: 'Arial', sans-serif;
-    color: #e2e8f0;
-    padding: 3.75rem 1.25rem;
-    background: transparent; /* Inherit parent background */
+/* Education Container Box */
+.education-container-box {
+  position: relative;
+  border: 4px solid #00f3ff;
+  padding: 40px;
+  background: rgba(0, 10, 20, 0.6);
+  box-shadow: 0 0 40px rgba(0, 243, 255, 0.4);
+  backdrop-filter: blur(5px);
+  margin-top: 30px;
+}
+
+/* Make individual project cards non-transparent - using unique class name */
+.project-card-edu {
+  position: relative;
+  background: rgba(0, 20, 40, 0.95);
+  border: 2px solid #00f3ff;
+  padding: 30px;
+  margin-bottom: 25px;
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  transition: all 0.3s ease;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+}
+
+.project-card-edu:last-child {
+  margin-bottom: 0;
+}
+
+.project-card-edu:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 40px rgba(0, 243, 255, 0.4), 0 0 30px rgba(0, 243, 255, 0.2);
+  border-color: #00ffff;
+  background: rgba(0, 30, 50, 0.95);
+}
+
+/* Degree Left Section */
+.degree-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  min-width: 180px;
+}
+
+.degree-logo {
+  width: 120px;
+  height: 120px;
+  object-fit: contain;
+  border: 3px solid #00f3ff;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.95);
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 243, 255, 0.4);
+}
+
+.degree-period {
+  font-size: 1.1rem;
+  color: #00f3ff;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-shadow: 0 0 10px rgba(0, 243, 255, 0.6);
+}
+
+/* Degree Right Section */
+.degree-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.degree-title {
+  font-size: 1.8rem;
+  color: #00f3ff;
+  margin: 0;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  text-shadow: 0 0 15px rgba(0, 243, 255, 0.6);
+}
+
+.scholarship-text {
+  font-size: 1.1rem;
+  color: #ffdd00;
+  margin: 0;
+  font-weight: 600;
+  text-shadow: 0 0 10px rgba(255, 221, 0, 0.5);
+}
+
+.institution-text {
+  font-size: 1.2rem;
+  color: #ffffff;
+  margin: 0;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+}
+
+/* Section Title Styling - using unique class name */
+.section-title-edu {
+  font-size: 2.5rem;
+  color: #00f3ff;
+  text-align: center;
+  margin-bottom: 20px;
+  letter-spacing: 0.1em;
+  text-shadow: 0 0 20px rgba(0, 243, 255, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.status-indicator-edu {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.status-active-edu {
+  background: #00ff00;
+  box-shadow: 0 0 15px rgba(0, 255, 0, 0.8);
+  animation: pulse-edu 2s infinite;
+}
+
+@keyframes pulse-edu {
+  0%, 100% {
+    opacity: 1;
   }
-
-  #education .max-w-7xl {
-    max-width: 68.75rem;
-    margin: 0 auto;
+  50% {
+    opacity: 0.5;
   }
+}
 
-  #education .orbitron {
-    font-family: 'Orbitron', sans-serif;
+/* Responsive Design */
+@media (max-width: 992px) {
+  .education-container-box {
+    padding: 30px;
   }
-
-  #education .section-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.75rem;
-    font-size: 2.25rem;
-    font-weight: 700;
-    letter-spacing: 0.125rem;
-    margin-bottom: 3.125rem;
-    text-transform: uppercase;
-  }
-
-  #education .status-indicator {
-    width: 0.75rem;
-    height: 0.75rem;
-    border-radius: 50%;
-    animation: pulse 2s infinite;
-  }
-
-  #education .status-active {
-    background: var(--accent-cyan); /* Simplified from gradient */
-    box-shadow: 0 0 0.5rem rgba(29, 209, 161, 0.6);
-  }
-
-  @keyframes pulse {
-    0%, 100% { transform: scale(1); }
-    50% { transform: scale(0.95); }
-  }
-
-  #education .subsection-title {
-    margin-bottom: 1.875rem;
-    font-size: 1.5rem;
-    color: var(--accent-cyan);
-    letter-spacing: 0.09375rem;
-    text-align: center;
-    font-weight: 600;
-  }
-
-  #education .degrees-container {
-    margin-top: 1.875rem;
-    display: grid;
-    gap: 1.875rem;
-  }
-
-  #education .project-card {
-    background: rgba(30, 41, 59, 0.5); /* Simplified background */
-    border: 1px solid var(--primary-blue);
-    padding: 1.75rem;
-    border-radius: 0.75rem;
-    display: flex;
-    gap: 1.75rem;
-    align-items: center;
-    transition: border-color 0.3s ease, background 0.3s ease, transform 0.3s ease;
-    position: relative;
-    overflow: hidden;
-  }
-
-  #education .project-card:hover {
-    border-color: var(--primary-blue);
-    background: rgba(59, 130, 246, 0.1); /* Precomputed RGBA */
-    transform: scale(1.05);
-  }
-
-  #education .degree-left {
-    flex: 0 0 8.125rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.75rem;
-  }
-
-  #education .degree-logo {
-    width: 6.25rem;
-    height: 6.25rem;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 2px solid var(--accent-cyan); /* Reduced border thickness */
-    background: white;
-    padding: 0.25rem;
-    transition: transform 0.3s ease;
-  }
-
-  #education .project-card:hover .degree-logo {
-    transform: scale(1.05);
-  }
-
-  #education .degree-period {
-    font-size: 0.875rem;
-    color: #94a3b8;
-    text-align: center;
-    font-weight: 500;
-    letter-spacing: 0.03125rem;
-  }
-
-  #education .degree-right {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-  }
-
-  #education .degree-title {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #e6eef9;
-    letter-spacing: 0.03125rem;
-    line-height: 1.3;
-  }
-
-  #education .institution-text {
-    font-size: 1rem;
-    color: #cbd5e1;
-    line-height: 1.6;
-    font-weight: 500;
-  }
-
-  #education .scholarship-text {
-    display: inline-block;
-    font-size: 0.9rem;
-    padding: 0.5rem 1rem;
-    border-radius: 1.25rem;
-    align-self: flex-start;
-    background: rgba(29, 209, 161, 0.15); /* Simplified background */
-    border: 1px solid var(--accent-cyan);
-    color: var(--accent-cyan);
-    font-weight: 600;
-    letter-spacing: 0.01875rem;
-    transition: background 0.3s ease, border-color 0.3s ease;
-  }
-
-  #education .project-card:hover .scholarship-text {
-    background: rgba(29, 209, 161, 0.25);
-    border-color: var(--accent-cyan);
-  }
-
-  #education .certifications-section {
-    margin-top: 5rem;
-  }
-
-  #education .certifications-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.875rem;
-    margin-top: 1.875rem;
-  }
-
-  #education .cert-card {
-    border: 1px solid var(--primary-blue);
-    border-radius: 0.75rem;
-    overflow: hidden;
-    background: white;
-    transition: border-color 0.3s ease, background 0.3s ease, transform 0.3s ease;
-  }
-
-  #education .cert-card:hover {
-    border-color: var(--primary-blue);
-    background: rgba(59, 130, 246, 0.1); /* Precomputed RGBA */
-    transform: scale(1.05); /* Simplified to scale only */
-  }
-
-  #education .cert-top {
-    padding: 2.5rem 1.25rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 8.75rem;
-  }
-
-  #education .cert-top--stanford { background: #dc2626; }
-  #education .cert-top--deep-learning { background: #374151; }
-  #education .cert-top--google { background: #10b981; }
-  #education .cert-top--ibm { background: #ef4444; }
-  #education .cert-top--microsoft { background: #3b82f6; }
-  #education .cert-top--ibm-advanced { background: #f97316; }
-
-  #education .cert-logo {
-    width: 4.375rem;
-    height: 4.375rem;
-    object-fit: contain;
-    transition: transform 0.3s ease;
-  }
-
-  #education .cert-card:hover .cert-logo {
-    transform: scale(1.1);
-  }
-
-  #education .cert-bottom {
-    padding: 1.25rem;
-    background: #f8fafc;
-    border-top: 1px solid #e2e8f0;
-  }
-
-  #education .cert-title {
-    font-size: 1.125rem;
-    font-weight: 700;
-    color: #1e293b;
-    margin-bottom: 0.375rem;
-  }
-
-  #education .cert-provider {
-    font-size: 0.875rem;
-    color: #64748b;
-    font-weight: 500;
-  }
-
-  #education .cta-container {
-    text-align: center;
-    margin-top: 3.75rem;
-  }
-
-  #education .cta-btn {
-    display: inline-block;
-    border: 1px solid var(--primary-blue);
-    color: #fff;
-    padding: 0.75rem 1.5rem;
-    border-radius: 0.5rem;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 1rem;
-    transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
-    letter-spacing: 0.0625rem;
-    text-transform: uppercase;
-  }
-
-  #education .cta-btn:hover {
-    background: var(--primary-blue);
-    color: #000;
-    transform: scale(1.05);
-  }
-
-  @media (max-width: 64rem) {
-    #education .certifications-grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-
-  @media (max-width: 48rem) {
-    #education .section-title { font-size: 1.75rem; }
-    #education .subsection-title { font-size: 1.25rem; }
-    #education .project-card {
-      flex-direction: row;
-      gap: 1.25rem;
-      align-items: flex-start;
-      padding: 1.25rem;
-    }
-    #education .degree-left { flex: 0 0 6.25rem; }
-    #education .degree-logo { width: 5rem; height: 5rem; }
-    #education .degree-period { font-size: 0.75rem; }
-    #education .degree-title { font-size: 1.25rem; }
-    #education .certifications-grid { grid-template-columns: 1fr; }
-  }
-
-  @media (max-width: 30rem) {
-    #education .project-card {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    #education .degree-left { gap: 0.75rem; align-items: center; }
-    #education .degree-right { width: 100%; align-items: center; }
-    #education .scholarship-text { align-self: center; }
-  }
-</style>
-
-
-
   
+  .project-card-edu {
+    flex-direction: column;
+    text-align: center;
+    padding: 25px;
+  }
+  
+  .degree-left {
+    min-width: auto;
+  }
+  
+  .degree-title {
+    font-size: 1.6rem;
+  }
+}
 
+@media (max-width: 768px) {
+  .education-container-box {
+    padding: 25px 20px;
+    border: 3px solid #00f3ff;
+  }
+  
+  .project-card-edu {
+    padding: 20px;
+    gap: 20px;
+  }
+  
+  .degree-logo {
+    width: 100px;
+    height: 100px;
+  }
+  
+  .degree-title {
+    font-size: 1.4rem;
+  }
+  
+  .scholarship-text {
+    font-size: 1rem;
+  }
+  
+  .institution-text {
+    font-size: 1.1rem;
+  }
+  
+  .section-title-edu {
+    font-size: 2rem;
+  }
+}
 
-
+@media (max-width: 480px) {
+  .education-container-box {
+    padding: 20px 15px;
+  }
+  
+  .project-card-edu {
+    padding: 15px;
+  }
+  
+  .degree-logo {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .degree-title {
+    font-size: 1.2rem;
+  }
+  
+  .degree-period {
+    font-size: 1rem;
+  }
+  
+  .section-title-edu {
+    font-size: 1.6rem;
+  }
+}
+</style>
 
 
   
@@ -4606,6 +4448,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
