cover photo added

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
   width: 95%;
   max-width: 1600px;
   margin: 0 auto;
-  background-image: url('graphics/power2.jpg');
+  background-image: url('graphics/cover.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -4448,6 +4448,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
