--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
     <div class="hero-content-container">
       <!-- Left Content Area -->
       <div class="hero-left-content">
-        <p class="hero-quote">"I like engineering because I love imagining."</p>
+        <p class="hero-quote">"."</p>
         <h2 class="hero-subtitle-enhanced">
           An enthusiastic Electrical Engineering researcher with a strong academic foundation, parallelly pursuing industry level work while advancing innovative research initiatives.
         </h2>
@@ -578,7 +578,7 @@
   width: 95%;
   max-width: 1600px;
   margin: 0 auto;
-  background-image: url('graphics/cover.png');
+  background-image: url('graphics/cover1.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -4448,6 +4448,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
