box tala dhakaleko

--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
     <div class="hero-content-container">
       <!-- Left Content Area -->
       <div class="hero-left-content">
+        <p class="hero-quote">.<br>.<br><br><br>.<br><br><br><br>.<br><br><br><br></p>
         <h2 class="hero-subtitle-enhanced">
           An enthusiastic Electrical Engineering researcher with a strong academic foundation, parallelly pursuing industry level work while advancing innovative research initiatives.
         </h2>
@@ -5389,6 +5390,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
