140 px to 200 px and added box

--- a/index.html
+++ b/index.html
@@ -511,8 +511,13 @@
 <section id="hero" class="hero-section-wrapper">
   <div class="hero-content">
     <h1 class="hero-title orbitron">DIPESH POUDEL</h1>
-    <h2 class="hero-subtitle">An enthusiastic Electrical Engineering researcher with a strong academic foundation, parallelly pursuing industry level work while advancing innovative research initiatives.</h2>
-  </div>
+    
+    <div class="max-w-4xl mx-auto text-center mb-16">
+  <h3 class="orbitron text-3xl font-bold mb-6 text-accent-cyan">
+    The Next Frontier in Electrical Engineering: AI Data Center Power Systems
+  </h3>
+      
+   
  
   <div class="hero-background-box">
     <div class="hero-background-overlay"></div>
@@ -702,7 +707,7 @@
   text-align: center;
   backdrop-filter: blur(12px);
   transition: all 0.3s ease;
-  height: 140px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -4535,6 +4540,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
