--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
     
     <div class="max-w-4xl mx-auto text-center mb-16">
   <h3 class="orbitron text-3xl font-bold mb-6 text-accent-cyan">
-    The Next Frontier in Electrical Engineering: AI Data Center Power Systems
+   An enthusiastic Electrical Engineering researcher with a strong academic foundation, parallelly pursuing industry level work while advancing innovative research initiatives.
   </h3>
       
    
@@ -4540,6 +4540,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
