--- a/index.html
+++ b/index.html
@@ -511,13 +511,9 @@
 <section id="hero" class="hero-section-wrapper">
   <div class="hero-content">
     <h1 class="hero-title orbitron">DIPESH POUDEL</h1>
-    
-    <div class="max-w-4xl mx-auto text-center mb-16">
-  <h3 class="orbitron text-3xl font-bold mb-6 text-accent-cyan">
-   An enthusiastic Electrical Engineering researcher with a strong academic foundation, parallelly pursuing industry level work while advancing innovative research initiatives.
-  </h3>
+    <h2 class="hero-subtitle">An enthusiastic Electrical Engineering researcher with a strong academic foundation, parallelly pursuing industry level work while advancing innovative research initiatives.</h2>
       
-   
+</div>   
  
   <div class="hero-background-box">
     <div class="hero-background-overlay"></div>
@@ -4542,6 +4538,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
