--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
     <div class="hero-content-container">
       <!-- Left Content Area -->
       <div class="hero-left-content">
-        <p class="hero-quote">.</p>
+        <p class="hero-quote">.<br> <br> . </p>
        
         <!-- Three Info Boxes -->
         <div class="hero-info-boxes">
@@ -4535,6 +4535,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
