--- a/index.html
+++ b/index.html
@@ -1450,30 +1450,15 @@
     </h2>
 
 
-    <!-- Add this RIGHT AFTER this line: <h2 class="orbitron text-4xl font-bold text-center mb-12"> -->
-
-<div class="max-w-4xl mx-auto text-center mb-16">
-  <h3 class="orbitron text-3xl font-bold mb-6 text-accent-cyan">
-    The Next Frontier in Electrical Engineering: AI Data Center Power Systems
-  </h3>
-  <p class="text-lg text-gray-300 italic">
-    My Current AI Data Center Power System Research
-  </p>
-</div>
-
-
-
-
-
-
+ 
 
 
 
 
 <!-- Add this RIGHT AFTER this line: <h2 class="orbitron text-4xl font-bold text-center mb-12"> -->
-<div class="max-w-4xl mx-auto text-center mb-16">
+<div class="max-w-[1400px] mx-auto text-center mb-16">
   <!-- Glowing Box Container -->
-  <div class="glow-box inline-block p-8 rounded-xl border-2 border-[var(--accent-cyan)] bg-[rgba(0,0,0,0.3)] backdrop-blur-md shadow-2xl mx-auto max-w-2xl">
+  <div class="glow-box inline-block p-8 rounded-xl border-2 border-[var(--accent-cyan)] bg-[rgba(0,0,0,0.3)] backdrop-blur-md shadow-2xl mx-auto w-full max-w-[1400px]">
     <h3 class="orbitron text-3xl font-bold mb-4 text-[var(--accent-cyan)] tracking-wide leading-tight">
       The Next Frontier in Electrical Engineering: AI Data Center Power Systems
     </h3>
@@ -4583,6 +4568,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
