sliding chalney wala?

--- a/index.html
+++ b/index.html
@@ -1792,14 +1792,6 @@
 
 
 
-
-
-
-
-
-
-
-
 <!-- Add this RIGHT AFTER this line: <h2 class="orbitron text-4xl font-bold text-center mb-12"> -->
 <div class="max-w-[1400px] mx-auto mb-16">
   <!-- Glowing Box Container - Extended to Wrap Entire Content -->
@@ -2077,6 +2069,7 @@
   document.addEventListener('DOMContentLoaded', () => {
     autoSlide('work-carousel');
     autoSlide('explanation-carousel');
+    autoSlide('table-carousel');
   });
 </script>
 
@@ -2087,14 +2080,6 @@
 
 
 
-
-
-
-
-
-
-
-    
 
 
 
@@ -4874,6 +4859,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
