photos code changed

--- a/index.html
+++ b/index.html
@@ -3957,12 +3957,12 @@ which added a full automation layer on top of the traditional control system.
       <div class="flex gap-2 mb-2">
         <div class="flex-1 min-w-0">
           <div class="rounded-lg border border-[var(--accent-cyan)] overflow-hidden" style="height: 140px;">
-            <img src="./graphics/egen1.jpg" alt="EGEN Activity 1" class="w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/egen1.jpg', 'EGEN Activity 1')">
+            <img src="./graphics/secc1.jpg" alt="EGEN Activity 1" class="w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/secc1.jpg', 'EGEN Activity 1')">
           </div>
         </div>
         <div class="flex-1 min-w-0">
           <div class="rounded-lg border border-[var(--accent-cyan)] overflow-hidden" style="height: 140px;">
-            <img src="./graphics/egen2.jpg" alt="EGEN Activity 2" class="w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/egen2.jpg', 'EGEN Activity 2')">
+            <img src="./graphics/secc2.jpg" alt="EGEN Activity 2" class="w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/secc2.jpg', 'EGEN Activity 2')">
           </div>
         </div>
       </div>
@@ -3973,8 +3973,8 @@ which added a full automation layer on top of the traditional control system.
         <div class="flex-1 min-w-0">
           <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)]" style="height: 140px;">
             <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="egen-carousel-1" style="transform: translateX(0%); height: 100%; width: 100%;">
-              <img src="./graphics/egen3.jpg" alt="Workshop 1" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/egen3.jpg', 'Workshop 1')">
-              <img src="./graphics/egen4.jpg" alt="Workshop 2" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/egen4.jpg', 'Workshop 2')">
+              <img src="./graphics/secc3.jpg" alt="Workshop 1" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/secc3.jpg', 'Workshop 1')">
+              <img src="./graphics/secc4.jpg" alt="Workshop 2" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/secc4.jpg', 'Workshop 2')">
             </div>
             <button onclick="slideCarousel('egen-carousel-1', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10">‹</button>
             <button onclick="slideCarousel('egen-carousel-1', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10">›</button>
@@ -3983,8 +3983,8 @@ which added a full automation layer on top of the traditional control system.
         <div class="flex-1 min-w-0">
           <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)]" style="height: 140px;">
             <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="egen-carousel-2" style="transform: translateX(0%); height: 100%; width: 100%;">
-              <img src="./graphics/egen5.jpg" alt="Training 1" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/egen5.jpg', 'Training 1')">
-              <img src="./graphics/egen6.jpg" alt="Training 2" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/egen6.jpg', 'Training 2')">
+              <img src="./graphics/secc5.jpg" alt="Training 1" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/secc5.jpg', 'Training 1')">
+              <img src="./graphics/secc6.jpg" alt="Training 2" class="carousel-item flex-shrink-0 w-full h-full object-contain cursor-pointer shake-on-hover" onclick="openModal('./graphics/secc6.jpg', 'Training 2')">
             </div>
             <button onclick="slideCarousel('egen-carousel-2', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10">‹</button>
             <button onclick="slideCarousel('egen-carousel-2', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10">›</button>
@@ -5045,6 +5045,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
