--- a/index.html
+++ b/index.html
@@ -3116,8 +3116,8 @@ which added a full automation layer on top of the traditional control system.
         </div>
         
         <!-- RIGHT: 16:9 IMAGE SPACE -->
-        <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden cursor-pointer" onclick="openModal('./graphics/solti1.jpg', 'Manipal Teaching Hospital Internship overiview')">
-          <img src="./graphics/solti1.jpg" alt="Manipal Teaching Hospital Internship Overview" class="w-full h-full object-cover">
+        <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden cursor-pointer" onclick="openModal('./graphics/solti1.png', 'Manipal Teaching Hospital Internship overiview')">
+          <img src="./graphics/solti1.png" alt="Manipal Teaching Hospital Internship Overview" class="w-full h-full object-cover">
           <p class="text-xs text-center mt-1"> Solatee Hotel Reference Images</p>
         </div>
       </div>
@@ -5498,6 +5498,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
