--- a/index.html
+++ b/index.html
@@ -3142,16 +3142,16 @@ which added a full automation layer on top of the traditional control system.
         </ul>
         <div class="internship-img-row">
           <div class="internship-img-wrapper">
-            <img src="./graphics/solti2.jpg" alt="Power diagram" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/solti2.jpg', 'Power diagram')">
-            <p class="text-xs text-center">Power diagram</p>
+            <img src="./graphics/solti2.jpeg" alt="Power diagram" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/solti2.jpeg', 'Main Panel Installation')">
+            <p class="text-xs text-center"> Main Panel Installation</p>
           </div>
           <div class="internship-img-wrapper">
-            <img src="./graphics/solti3.jpg" alt=" Hospital Basement PB" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/solti3.jpg', 'Hospital Basement PB')">
-            <p class="text-xs text-center">Hospital Basement PB </p>
+            <img src="./graphics/solti3.jpeg" alt=" Hospital Basement PB" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/solti3.jpeg', 'Bus Bar connection')">
+            <p class="text-xs text-center">Bus Bar connection </p>
           </div>
         </div>
       </div>
-
+      
       <!-- BOX 2 -->
       <div class="project-card">
         <div class="hud-corner tl"></div>
@@ -3174,7 +3174,7 @@ which added a full automation layer on top of the traditional control system.
           </div>
         </div>
       </div>
-
+      
       <!-- BOX 3 -->
       <div class="project-card">
         <div class="hud-corner tl"></div>
@@ -5498,6 +5498,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
