--- a/index.html
+++ b/index.html
@@ -2820,12 +2820,12 @@ which added a full automation layer on top of the traditional control system.
         <!-- LEFT: LOGO + TITLE + TEXT -->
         <div class="flex-1">
           <div class="flex items-center mb-4">
-            <img src="./graphics/primelogo.jpg" alt="Manipal Teaching Hospital Logo" class="w-16 h-16 mr-4 object-contain">
+            <img src="./graphics/primelogo.jpg" alt="Prime Engineering Logo" class="w-16 h-16 mr-4 object-contain">
             <h3 class="orbitron text-2xl font-bold text-accent-cyan"> Prime Engineering, Pokhara Nepal</h3>
           </div>
           
           <p class="text-sm mb-2"><strong>Role:</strong>Consultant </p>
-          <p class="text-sm mb-2"><strong>Duration:</strong>september 20, 2025  Onwards</p>
+          <p class="text-sm mb-2"><strong>Duration:</strong> September 20,  2025  Onwards</p>
           <hr class="border-[var(--accent-cyan)]/30 my-3">
           <p class="text-sm leading-relaxed">
             I oversaw electrical infrastructure project of a 5-star hotel under head engineer.  The work included the complete setup of panels,CBs, capacitor bank installation, generators, and automatic switching topology. The works encompassed cable tray and cable laying, connections, PLC setup, generator priority setup, and related connections.
@@ -4952,6 +4952,7 @@ which added a full automation layer on top of the traditional control system.
 </body>
 </html>
 ```
+
 
 
 
